--- a/src/app/components/verify-email/verify-email.component.html
+++ b/src/app/components/verify-email/verify-email.component.html
@@ -1,32 +1,26 @@
 <div class="displayTable">
   <div class="displayTableCell">
 
-    <div class="px-logo">
-      <a href="https://www.positronx.io" target="_blank">
-        <img src="https://www.positronx.io/wp-content/themes/positronx/img/logo-positronx-white.svg" alt="positronX.io - Learn Full Stack Development">
-      </a>
-    </div>
-
     <div class="authBlock">
-      <h3>Thank You for Registering</h3>
+      <h3>Gracias por Registrarte</h3>
 
       <div class="formGroup" *ngIf="authService.userData as user">
-        <p class="text-center">We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
-        <p class="text-center">Please check your email and click on the link to verfiy your email address.</p>
+        <p class="text-center">Se envio una confirmacion al correo <strong>{{user.email}}</strong>.</p>
+        <p class="text-center">Por favor ingresa a tu correo y haz click en el link para verficar tu direccion de correo.</p>
       </div>
 
       <!-- Calling SendVerificationMail() method using authService Api -->
       <div class="formGroup">
         <button type="button" class="btn btnPrimary" (click)="authService.SendVerificationMail()">
           <i class="fas fa-redo-alt"></i>
-          Resend Verification Email
+          Reenviar Email
         </button>
       </div>
 
     </div>
 
     <div class="redirectToLogin">
-      <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
+      <span>Volver? <span class="redirect" routerLink="/sign-in"> Ingreso</span></span>
     </div>
 
   </div>
